# StrainGE

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  kmerseq  kmerseq.py  kmertest.py  kmertree  kmertree.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-pypa.yml
docs/: analysis.ipynb  compare-strains.md  conf.py  create-database.md  index.rst  requirements.txt  straingr.md  straingst.md
kmerizer/: kmerizer.c  kmertest.py  kmertools.py  setup.py
kmertools/: grtools.py  kmerizer.c  kmertools.py  setup.py
seqtools/: 10xBamToFastq.py  10xbamfilter.py  10xindex.py  align10x.py  mismatches.py  parsewig.py  readstats.py  splitbarcodes.py  splitfasta.py  splitfastq  splitfastq.c  splitfastq.py
src/kmerizer/: kmerizer.cpp  kmerizer.h  main.cpp
src/strainge/: __init__.py  _version.py  cluster.py  comparison.py  kmertools.py  sample_compare.py  search_tool.py  utils.py  variant_caller.py
src/strainge/cli/: __init__.py  kmersets.py  main.py  registry.py  straingr.py  straingst.py
src/strainge/io/: __init__.py  comparisons.py  utils.py  variants.py
test/: 10x.py  10xalignstats.py  10xbamfilter.py  align10x.py  barcode10x.py  check.py  fingerprint.py  hashplots.py  kmerspectrum  kmertest.py  nwk.py  readstats.py  refseq-download.py  similaritysets.py  straingst-2strain.py  straingst-analyze.py  straingst-test.py
