[build-system]
requires = ["oldest-supported-numpy", "setuptools", "wheel", "pybind11>=2.2", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

# No need to build wheels for PyPy
[tool.cibuildwheel]
skip = ["pp*", "*i686"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/strainge/_version.py"
versionfile_build = "strainge/_version.py"
tag_prefix = "v"
parentdir_prefix = "strainge-"
